--- a/microservice-config-product.yml
+++ b/microservice-config-product.yml
@@ -35,7 +35,7 @@ eureka:
     instanceId: ${spring.application.name}:${server.port}
     prefer-ip-address: true 
 emp:
-  name: lisi
+  name: zhangsan
 ---
 server:
   port: 8001
